@@ -15,6 +15,7 @@
     * Added and implemented JSON file with HW limits
     * Added api/printer/printhead GET endpoint
     * Changed variable firmware_version to firmware
+    * Added LOAD/UNLOAD filament commands
 
 0.5.1 (2021-07-16)
     * Implementation of print after upload endpoint
